syntax = "proto3";

package GamePacket;

message C_SelectedCharacter{
	CharacterInfo characterInfo = 1;
}
message S_SelectedCharacter{
	bool result = 1;
}
message CharacterInfo{
	int32 Id = 1;
	int32 UserId = 2;
	int32 Gender = 3;
	string CharacterName =4;
	ClassType Class =5;
	string AppearanceCode = 6;
}
message C_EnterGameRequest{
	int32 CharacterId = 1;
	int32 MapId = 2;
}
message S_BroadcastEnter{
	CharacterList enterCharacter = 1;
}

message S_EnterGameResponse {
	int32 MapId = 1;
  repeated CharacterList characterList = 2;
}

message CharacterList {
  bool IsLocal = 1; // true: 본인, false: 다른 유저
  CharacterInfo characterInfo = 2;
  Status statInfo= 3;
  MoveData moveInfo = 4;
}


message PlayerInfo {
  int32 playerId = 1;
  string name = 2;
  float posX = 3;
  float posY = 4;
}


message C_BroadcastMove
{
	MoveData BroadcastMove = 1;
}

message S_BroadcastMove
{ 
	int32 playerId = 1;
	int32 CharacterId = 2;
	MoveData BroadcastMove = 3;
}


enum ClassType
{
	NoHave = 0;

	Knight = 1;

	Archer = 2;

	Mage = 3;
}
message MoveData
{
	float posX = 1;
  float posY = 2;
  float posZ = 3;
  float dirY = 4;
  float speed =5;
  int64 timestamp = 6;
}

message Status{
    int32 Level = 1;
    float Exp = 2;
    int32 Gold = 3; 
    float NowHP = 4;
	float MaxHP = 5;
	float NowMP = 6;
	float MaxMP = 7; 
    int64 timestamp = 8;
}

message ObjectInfo{
	string Name = 1;
	int32 Id = 2; 
	MoveData MoveInfo = 3;
	Status StatInfo = 4;
}