syntax = "proto3";

package Packet;

message C_LoginToken{
  string jwt_token = 1; 
}
message S_LoginToken{
	bool result = 1;
}